# LifeSciences

./: .env.example  .gitignore  README.md  pyproject.toml  pyproject.toml.dev  requirements.txt
applications/agentic-tx/: .env.deploy  .env.example  CITATION.cff  README.md  pyproject.toml
applications/agentic-tx/agentic_tx/: __init__.py  adk_app.py  agent.py  agent_engine_app.py  agent_monolithic.py  config.py  prompts.py  py.typed
applications/agentic-tx/agentic_tx/adk/: gemini3.py
applications/agentic-tx/agentic_tx/subagents/biology_agent/: __init__.py  agent.py  config.py  prompts.py
applications/agentic-tx/agentic_tx/subagents/biology_agent/tools/: __init__.py  get_gene_description.py  get_protein_info.py  identify_protein_sequence.py  translate_gene_to_protein.py
applications/agentic-tx/agentic_tx/subagents/chemistry_agent/: __init__.py  agent.py  config.py  prompts.py
applications/agentic-tx/agentic_tx/subagents/chemistry_agent/tools/: __init__.py  analyze_oral_bioavailability.py  convert_structure.py  generate_molecule_image.py  get_molecular_properties.py  (+2 more)
applications/agentic-tx/agentic_tx/subagents/prediction_agent/: __init__.py  agent.py  config.py  prompts.py
applications/agentic-tx/agentic_tx/subagents/researcher_agent/: __init__.py  agent.py  config.py  prompts.py
applications/agentic-tx/agentic_tx/tools/: __init__.py  base.py  tx_greeting.py
applications/agentic-tx/agents_shared/txgemma/: __init__.py  execute_task.py  metadata_loader.py  task_metadata.json  tasks.py
applications/agentic-tx/deploy/agents_deploy/: __init__.py  agent_deployment.py  agent_engine.py  agentspace.py  authorization.py  build.py  cli.py  client.py  deployment_settings.py  deployment_state.py  loader.py  types.py
applications/agentic-tx/notebooks/: [TxGemma]Agentic_Demo_with_Hugging_Face.ipynb  [TxGemma]Quickstart_with_Model_Garden.ipynb
applications/pharma-on-gemini-enterprise/biocompass-on-gemini-enterprise/: .env.example  README.md  agents-cli-manifest.yaml  pyproject.toml
applications/pharma-on-gemini-enterprise/biocompass-on-gemini-enterprise/app/: agent.py  fast_api_app.py
applications/pharma-on-gemini-enterprise/biocompass-on-gemini-enterprise/app/app_utils/: telemetry.py
applications/pharma-on-gemini-enterprise/biocompass-on-gemini-enterprise/app/sub_agents/: __init__.py  deep_research.py  entity_analysis.py  literature_search.py
applications/pharma-on-gemini-enterprise/biocompass-on-gemini-enterprise/app/tools/: _http.py  biorxiv.py  clinicaltrials.py  europe_pmc.py  eutils.py  pubtator.py  visualize_concept.py
applications/pharma-on-gemini-enterprise/biocompass-on-gemini-enterprise/biocompass_agent/: .env.example  README.md  agent.py  biocompass.evalset.json  requirements.txt
applications/pharma-on-gemini-enterprise/biocompass-on-gemini-enterprise/biocompass_agent/sub_agents/: __init__.py  deep_research.py  entity_analysis.py  literature_search.py
applications/pharma-on-gemini-enterprise/biocompass-on-gemini-enterprise/biocompass_agent/tests/: test_config.json  test_evals.py  test_smoke.py
applications/pharma-on-gemini-enterprise/biocompass-on-gemini-enterprise/biocompass_agent/tools/: biorxiv.py  clinicaltrials.py  europe_pmc.py  eutils.py  visualize_concept.py
applications/pharma-on-gemini-enterprise/biocompass-on-gemini-enterprise/terraform/: main.tf  variables.tf
applications/pharma-on-gemini-enterprise/biocompass-on-gemini-enterprise/tests/: biocompass.evalset.json  test_evals.py  test_smoke.py
applications/pharma-on-gemini-enterprise/biocompass-on-gemini-enterprise/tests/eval/: biocompass.evalset.json  test_config.json  test_evals.py
applications/pharma-on-gemini-enterprise/biocompass-on-gemini-enterprise/tests/integration/: test_smoke.py
applications/pharma-on-gemini-enterprise/paperbanana-on-gemini-enterprise/: .env.example  .gitignore  Dockerfile  README.md  agents-cli-manifest.yaml  pyproject.toml
applications/pharma-on-gemini-enterprise/paperbanana-on-gemini-enterprise/app/: agent.py  agent_runtime_app.py  fast_api_app.py  style_guide.md
applications/pharma-on-gemini-enterprise/paperbanana-on-gemini-enterprise/app/app_utils/: telemetry.py  typing.py
applications/pharma-on-gemini-enterprise/paperbanana-on-gemini-enterprise/paperbanana_agent/: .env.example  NOTICE  README.md  agent.py  prompts.py  style_guide.md
applications/pharma-on-gemini-enterprise/paperbanana-on-gemini-enterprise/terraform/: main.tf  outputs.tf  variables.tf
applications/pharma-on-gemini-enterprise/paperbanana-on-gemini-enterprise/tests/integration/: conftest.py  test_agent.py
applications/research-agent/: .env.example  .gitignore  README.md  deploy-ae.sh  deploy-ge.sh  main.py  pyproject.toml
applications/research-agent/research_agent/: __init__.py  agent.py  agent_engine_app.py  config.py  instructions.md  parallel_data_gathering.py  set_research_plan.py  state_keys.py
applications/research-agent/research_agent/sub_agents/: __init__.py
applications/research-agent/research_agent/sub_agents/bigquery/: __init__.py  agent.py  instructions.md
applications/research-agent/research_agent/sub_agents/clinical_trials/: __init__.py  agent.py  api_client.py  tools.py
applications/research-agent/research_agent/sub_agents/display/: __init__.py  agent.py
applications/research-agent/research_agent/sub_agents/refinement/: checker.py  evaluator.py  executor.py
applications/research-agent/research_agent/sub_agents/research/: __init__.py  agent.py
applications/research-agent/research_agent/sub_agents/synthesis/: __init__.py  agent.py  instructions.md
(+268 files in other folders)
