# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biocompass-agent"
version = "0.1.0"
description = "ADK agent for Biocompass"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fsspec[gcs]==2025.10.0",
    "google-adk[eval,otel-gcp]>=2.2.0",
    "google-cloud-aiplatform[agent_engines]",
    "pyopenssl<26",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
